remove twitter cards test

--- a/index.html
+++ b/index.html
@@ -5,15 +5,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="height=device-height, width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <meta name="twitter:card" content="player" />
-  <meta name="twitter:player" content="https://esai256.github.io/test.html" />
-  <meta name="twitter:player:width" content="100" />
-  <meta name="twitter:player:height" content="100" />
+  <meta name="twitter:card" content="summary" />
   <meta name="twitter:image" content="./favicon.ico" />
-  <meta name="twitter:site" content="@shyftplan" />
-  <meta name="twitter:creator" content="@shyftplan" />
   <meta property="og:title" content="Hompage of esai" />
-  <meta property="og:description" content="esai rocks" />
+  <meta property="og:description" content="Welcome to my homepage!" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://esai256.github.io" />
   <title>esai-home</title>
