add test og image

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <meta property="og:description" content="Welcome to my homepage!" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://esai256.github.io" />
+  <meta property="og:image" content="https://placehold.it/150x150" />
   <title>esai-home</title>
   <link rel="stylesheet" type="text/css" href="./index.css" />
   <link rel="stylesheet" type="text/css" href="./logo.css" />
