--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <meta property="og:description" content="Welcome to my homepage!" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://esai256.github.io" />
-  <meta property="og:image" content="https://placehold.it/150x150" />
+  <meta property="og:image" content="150x150.png" />
+  <meta property="og:image:height" content="150">
+  <meta property="og:image:width" content="150">
   <title>esai-home</title>
   <link rel="stylesheet" type="text/css" href="./index.css" />
   <link rel="stylesheet" type="text/css" href="./logo.css" />
