update test og image

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta property="og:title" content="Hompage of esai" />
   <meta property="og:description" content="Welcome to my homepage!" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://esai256.github.io" />
-  <meta property="og:image" content="150x150.png" />
+  <meta property="og:url" content="https://elias-seichter.de" />
+  <meta property="og:image" content="https://elias-seichter.de/150x150.png" />
   <meta property="og:image:height" content="150">
   <meta property="og:image:width" content="150">
   <title>esai-home</title>
