--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
 
 
 <!-- Facebook Meta Tags -->
-<meta property="og:url" content="https://elias-seichter.de/">
+<meta property="og:url" content="https://esai256.github.io">
 <meta property="og:type" content="website">
 <meta property="og:title" content="Hompage of esai">
 <meta property="og:description" content="Welcome to my homepage!">
-<meta property="og:image" content="https://elias-seichter.de/150x150.png">
+<meta property="og:image" content="./150x150.png">
 
 <!-- Twitter Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
 <meta property="twitter:domain" content="elias-seichter.de">
-<meta property="twitter:url" content="https://elias-seichter.de/">
+<meta property="twitter:url" content="https://esai256.github.io">
 <meta name="twitter:title" content="Hompage of esai">
 <meta name="twitter:description" content="Welcome to my homepage!">
-<meta name="twitter:image" content="https://elias-seichter.de/150x150.png">
+<meta name="twitter:image" content="./150x150.png">
 
 <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
