--- a/index.html
+++ b/index.html
@@ -17,23 +17,22 @@
     <meta property="og:image:height" content="150" />
     <meta property="og:image:width" content="150" />
 
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://esai256.github.io" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Hompage of esai" />
+    <meta property="og:description" content="Welcome to my homepage!" />
+    <meta property="og:image" content="./150x150.png" />
 
-<!-- Facebook Meta Tags -->
-<meta property="og:url" content="https://esai256.github.io">
-<meta property="og:type" content="website">
-<meta property="og:title" content="Hompage of esai">
-<meta property="og:description" content="Welcome to my homepage!">
-<meta property="og:image" content="./150x150.png">
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="esai256.github.io" />
+    <meta property="twitter:url" content="https://esai256.github.io" />
+    <meta name="twitter:title" content="Hompage of esai" />
+    <meta name="twitter:description" content="Welcome to my homepage!" />
+    <meta name="twitter:image" content="./150x150.png" />
 
-<!-- Twitter Meta Tags -->
-<meta name="twitter:card" content="summary_large_image">
-<meta property="twitter:domain" content="elias-seichter.de">
-<meta property="twitter:url" content="https://esai256.github.io">
-<meta name="twitter:title" content="Hompage of esai">
-<meta name="twitter:description" content="Welcome to my homepage!">
-<meta name="twitter:image" content="./150x150.png">
-
-<!-- Meta Tags Generated via https://www.opengraph.xyz -->
+    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
     <title>esai-home</title>
     <link rel="stylesheet" type="text/css" href="./index.css" />
