--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Hompage of esai" />
     <meta property="og:description" content="Welcome to my homepage!" />
-    <meta property="og:image" content="./150x150.png" />
+    <meta property="og:image" content="https://esai256.github.io/150x150.png" />
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -30,7 +30,10 @@
     <meta property="twitter:url" content="https://esai256.github.io" />
     <meta name="twitter:title" content="Hompage of esai" />
     <meta name="twitter:description" content="Welcome to my homepage!" />
-    <meta name="twitter:image" content="./150x150.png" />
+    <meta
+      name="twitter:image"
+      content="https://esai256.github.io/150x150.png"
+    />
 
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
