--- a/index.html
+++ b/index.html
@@ -7,35 +7,12 @@
       content="height=device-height, width=device-width, initial-scale=1.0"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <!-- <meta name="twitter:card" content="summary" /> -->
-    <!-- <meta name="twitter:image" content="./favicon.ico" /> -->
-    <!-- <meta property="og:title" content="Hompage of esai" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:image" content="./favicon.ico" />
+    <meta property="og:title" content="Hompage of esai" />
     <meta property="og:description" content="Welcome to my homepage!" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://elias-seichter.de" />
-    <meta property="og:image" content="https://elias-seichter.de/150x150.png" /> -->
-    <meta property="og:image:height" content="150" />
-    <meta property="og:image:width" content="150" />
-
-    <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="https://esai256.github.io" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="Hompage of esai" />
-    <meta property="og:description" content="Welcome to my homepage!" />
-    <meta property="og:image" content="https://esai256.github.io/150x150.png" />
-
-    <!-- Twitter Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta property="twitter:domain" content="esai256.github.io" />
-    <meta property="twitter:url" content="https://esai256.github.io" />
-    <meta name="twitter:title" content="Hompage of esai" />
-    <meta name="twitter:description" content="Welcome to my homepage!" />
-    <meta
-      name="twitter:image"
-      content="https://esai256.github.io/150x150.png"
-    />
-
-    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
     <title>esai-home</title>
     <link rel="stylesheet" type="text/css" href="./index.css" />
