--- a/index.html
+++ b/index.html
@@ -19,6 +19,20 @@
     <link rel="stylesheet" type="text/css" href="./logo.css" />
     <link rel="apple-touch-icon-precomposed" href="./favicon.ico" />
     <link rel="icon" type="image/ico" href="./favicon.ico" />
+
+    <script id="mcjs">
+      !(function (c, h, i, m, p) {
+        (m = c.createElement(h)),
+          (p = c.getElementsByTagName(h)[0]),
+          (m.async = 1),
+          (m.src = i),
+          p.parentNode.insertBefore(m, p);
+      })(
+        document,
+        "script",
+        "https://chimpstatic.com/mcjs-connected/js/users/e736bbf985fd97cde79bd1d2e/03d5b43916fc81030b1c8f3d7.js"
+      );
+    </script>
   </head>
 
   <body>
